--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
   <script src="data.js"></script>
-  <script src="app.js"></script>
+  <script src="https://github.com/tolewicz/UFOs_website_JavaScript/blob/master/app.js"></script>
   
 </body>
 </html>
