--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
   crossorigin="anonymous"
   />
-  <link rel="stylesheet" href="https://github.com/tolewicz/UFOs_website_JavaScript/blob/master/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-dark">
   <!--navitation bar-->
