--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-  <script src="data.js"></script>
+  <script src="https://github.com/tolewicz/UFOs_website_JavaScript/blob/master/data.js"></script>
   <script src="https://github.com/tolewicz/UFOs_website_JavaScript/blob/master/app.js"></script>
   
 </body>
